--- a/simple.html
+++ b/simple.html
@@ -39,7 +39,7 @@
 
         // Your web app's Firebase configuration
         const firebaseConfig = {
-            apiKey: "AIzaSyBmycUV4rIN_QBA4rgLkoZ9jqr27tngiG4",
+            apiKey: "",
             authDomain: "fir-demo-881dc.firebaseapp.com",
             projectId: "fir-demo-881dc",
             storageBucket: "fir-demo-881dc.appspot.com",
