--- a/simple.html
+++ b/simple.html
@@ -5,6 +5,104 @@
     <meta charset="utf-8">
     <link rel="stylesheet" href="style.css">
     <title>Chatアプリ</title>
+    <style>
+body {
+    font-family: Arial, sans-serif;
+    margin: 0;
+    padding: 20px;
+    box-sizing: border-box;
+}
+
+#uname {
+    margin-bottom: 10px;
+}
+
+#text {
+    width: 100%;
+    height: 100px;
+    margin-bottom: 10px;
+}
+
+#send {
+    background-color: #4CAF50;
+    color: white;
+    border: none;
+    padding: 10px 20px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    margin-bottom: 10px;
+    cursor: pointer;
+}
+
+.message {
+    border: 1px solid #ddd;
+    border-radius: 5px;
+    padding: 10px;
+    margin-bottom: 10px;
+}
+
+.message p {
+    margin: 0;
+}
+
+.message button {
+    background-color: #f44336;
+    color: white;
+    border: none;
+    padding: 5px 10px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 12px;
+    margin-left: 10px;
+    cursor: pointer;
+}
+
+#output {
+    max-width: 600px;
+    max-height: 500px;
+    overflow: auto;
+    margin: 0 auto;
+}
+
+.message {
+    position: relative;
+    background-color: #F5F5F5;
+    padding: 10px;
+    border-radius: 20px;
+    margin-bottom: 10px;
+}
+
+.message p:first-child {
+    font-weight: bold;
+    margin-bottom: 5px;
+}
+
+.message p:last-child {
+    margin-bottom: 0;
+}
+
+.message button {
+    position: absolute;
+    top: 50%;
+    right: 5px;
+    transform: translateY(-50%);
+    border-radius: 20px;
+}
+
+.message img {
+    max-width: 100%;
+    margin-top: 10px;
+    border-radius: 5px;
+}
+
+.timestamp {
+    font-size: 12px;
+    color: #888;
+}
+    </style>
 </head>
 
 <body>
